# AOC_2021

./: .gitignore  env.yaml
jl_src/: day_1.jl  day_10.jl  day_11.jl  day_12.jl  day_13.jl  day_14.jl  day_2.jl  day_3.jl  day_4.jl  day_5.jl  day_6.jl  day_7.jl  day_8.jl  day_9.jl  template.jl
rust_src/: Cargo.toml
rust_src/src/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  template.rs
scripts/: prep_next_day.sh
